<resources>
    <string name="app_name">Bitacora2</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="login">Login</string>
    <string name="registrarse">Registrarse</string>
    <string name="recuperar_contrase_a">Recuperar Contraseña</string>
    <string name="todo">TODO</string>
    <string name="title_activity_materias">Materias</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="nota">Nota</string>
</resources>